--- a/src/app/utils/delete-generic/delete-generic.component.html
+++ b/src/app/utils/delete-generic/delete-generic.component.html
@@ -3,16 +3,15 @@
     <div class="modal-card">
         <header class="modal-card-head">
             <p class="modal-card-title"><span *ngIf="message?.title != undefined">{{message.title}}</span></p>
-            <button class="delete" aria-label="close" (click)="cancel()"></button>
+            <!-- <button class="delete" aria-label="close" (click)="cancel()"></button> -->
         </header>
         <section class="modal-card-body">
             <span *ngIf="message?.message != undefined">{{message.message}}</span>
         </section>
-        <footer class="modal-card-foot">
-            <button class="button is-danger" (click)="confirm()">Eliminar</button>
-
+        <div class="confirmCancel">            
             <button class="button is-danger" (click)="confirm2()" *ngIf="message?.type == 2">Eliminar Todo</button>
-            <button class="button" (click)="cancel()">Cancelar</button>
-        </footer>
+            <button class="btn btnCancel" (click)="cancel()">Cancelar</button>
+            <button class="btn btnDelete" (click)="confirm()">Eliminar</button>
+        </div>
     </div>
 </div>
