Dowload imager method

--- a/src/app/user/show-user/show-user.component.html
+++ b/src/app/user/show-user/show-user.component.html
@@ -24,7 +24,7 @@
         </div>
 
         <div class="imgUser">
-            <img src="{{ user.img }}" id="imgUser">
+            <img src="{{ userImgFile }}" id="imgUser">
             <input id="imgInput" type="file" (change)="getFile($event.target.files)" accept="image/*">
         </div>
 
