--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,3 +1,5 @@
+<router-outlet></router-outlet>
+<div *ngIf="principal">
 <mat-progress-bar mode="indeterminate" *ngIf="sendingData" class="barLoader"></mat-progress-bar>
 
 <h2 class="centerText">Usuarios</h2>
@@ -55,6 +57,5 @@
 </a>
 
 
+</div>
 
-
-<router-outlet></router-outlet>
