--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -33,27 +33,34 @@
 
     <ul *ngIf="userData.getUserType() >= 6">
 
-        <li [routerLink]="['/users']"><button mat-button>Usuarios</button></li>
+        
         <li [routerLink]="['/receipt']"><button mat-button>Recibos</button></li>
         <li [routerLink]="['/parking']"><button mat-button>Estacionamiento</button></li>
         <li [routerLink]="['/schedules']"><button mat-button>Horarios</button></li>
         <li [routerLink]="['/asistencias']" *ngIf="userData.getUserType() >= 6"><button mat-button>Asistencias</button></li>
 
+        
+
+        <li [routerLink]="['/expenses']"><button mat-button>Gastos</button></li>        
+
+        <li [routerLink]="['/cutout']" *ngIf="userData.getUserType() >= 6"><button mat-button>Recorte de Caja</button></li>
+        <li [routerLink]="['/pago-trabajadores']" *ngIf="userData.getUserType() >= 6"><button mat-button>Pago Trabajadores</button></li>
+
+    </ul>
+
+    <h5>TIENDA</h5>
+    <ul>
         <li [routerLink]="['/inventory']"><button mat-button>Inventario</button></li>
         <li [routerLink]="['/sale-point']"><button mat-button>Punto de Venta <span class="notified">{{ userData.getSalesErrorConnection() }}</span></button></li>
         <li [routerLink]="['/sales']"><button mat-button>Registro de Ventas</button></li>
         <li [routerLink]="['/sale-debt']"><button mat-button>Deudores Abarrotería</button></li>
+    </ul>
 
-        <li [routerLink]="['/expenses']"><button mat-button>Gastos</button></li>
-
+    <h5>CONFIGURACION</h5>
+    <ul>        
+        <li [routerLink]="['/users']"><button mat-button>Usuarios</button></li>
         <li [routerLink]="['/events']"><button mat-button>Eventos</button></li>
-
-        <li [routerLink]="['/cutout']" *ngIf="userData.getUserType() >= 6"><button mat-button>Recorte de Caja</button></li>
-
-        <li [routerLink]="['/pago-trabajadores']" *ngIf="userData.getUserType() >= 6"><button mat-button>Pago Trabajadores</button></li>
-
         <li [routerLink]="['/monthly-cost']"><button mat-button>Costos por Hora</button></li>
-
     </ul>
 
     <ul *ngIf="userData.getUserType() <= 5 && userData.getUserType() >= 2">
