--- a/src/app/structure/structure.component.html
+++ b/src/app/structure/structure.component.html
@@ -8,7 +8,7 @@
 </nav>
 
 <div class="sideNav" [@menu]='stateMenu'>
-    <div style="background-image: url(https://png.pngtree.com/thumb_back/fh260/back_pic/00/12/25/24563b4acf5ccd5.jpg)" id="userInfSection">
+    <div style="background-image: url(../assets/img/backgroundMenu.jpeg)" id="userInfSection">
         <div>
 
             <img src="{{ userData.getUserImg() }}">
